# UEFI_Space_Adventures

./: .gitignore  CMakeLists.txt  OVMF_CODE.fd  OVMF_VARS.fd  README.md  create_disk.sh
efi_root/EFI/BOOT/: BOOTX64.EFI
inc/: Game.h  Graphics.h  Helpers.h  Images.h  helpers.h  images.h
src/: Game.c  Graphics.c  Helpers.c  Main.c  helpers.c  main.c
utils/: efidsk  launch.sh
utils/efi_root/EFI/BOOT/: BOOTX64.EFI
